--- a/src/global.css
+++ b/src/global.css
@@ -1,17 +1,122 @@
-*{
-	margin: 0;
-	padding:0;
-	box-sizing: border-box;
+* { margin: 0; padding: 0; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+table { border-collapse: collapse; border-spacing: 0; }
+img, img a, img a:hover { border: 0; display: block; max-width: 100%; -ms-interpolation-mode: bicubic; }
+li{  list-style-type: none;  }
+a{  text-decoration: none;  }
+::-moz-selection { background: #fff600; color: #222c37; text-shadow: none; }
+::selection { background: #fff600; color: #222c37; text-shadow: none; }
+.clear:after { visibility: hidden; display: block; font-size: 0; content: " "; clear: both; height: 0; }
+.clear { display: inline-table; clear: both; }
+/* Hides from IE-mac \*/ * html .clear { height: 1%; } .clear { display: block; } /* End hide from IE-mac */
+
+/****************************************
+  ==== MARGINS & PADDINGS
+****************************************/
+.mb0 { margin-bottom: 0 !important; }
+.mb5 { margin-bottom: 5px !important; }
+.mb10 { margin-bottom: 10px !important; }
+.mb15 { margin-bottom: 15px !important; }
+.mb20 { margin-bottom: 20px !important; }
+.mb30 { margin-bottom: 30px !important; }
+.mb40 { margin-bottom: 40px !important; }
+
+.mt0 { margin-top: 0 !important; }
+.mt5 { margin-top: 5px !important; }
+.mt10 { margin-top: 10px !important; }
+.mt15 { margin-top: 15px !important; }
+.mt20 { margin-top: 20px !important; }
+.mt30 { margin-top: 30px !important; }
+.mt40 { margin-top: 40px !important; }
+
+.mr0 { margin-right: 0 !important; }
+.mr5 { margin-right: 5px !important; }
+.mr10 { margin-right: 10px !important; }
+.mr15 { margin-right: 15px !important; }
+.mr20 { margin-right: 20px !important; }
+.mr30 { margin-right: 30px !important; }
+.mr40 { margin-right: 40px !important; }
+
+.ml0 { margin-left: 0 !important; }
+.ml5 { margin-left: 5px !important; }
+.ml10 { margin-left: 10px !important; }
+.ml15 { margin-left: 15px !important; }
+.ml20 { margin-left: 20px !important; }
+.ml30 { margin-left: 30px !important; }
+
+.p0 { padding: 0 !important; }
+.p5 { padding: 5px !important; }
+.p10 { padding: 10px !important; }
+.p15 { padding: 15px !important; }
+.p20 { padding: 20px !important; }
+.p30 { padding: 30px !important; }
+
+.pr0 { padding-right: 0 !important; }
+.pr5 { padding-right: 5px !important; }
+.pr10 { padding-right: 10px !important; }
+.pr15 { padding-right: 15px !important; }
+.pr20 { padding-right: 20px !important; }
+.pr30 { padding-right: 30px !important; }
+
+.pl0 { padding-left: 0 !important; }
+.pl5 { padding-left: 5px !important; }
+.pl10 { padding-left: 10px !important; }
+.pl15 { padding-left: 15px !important; }
+.pl20 { padding-left: 20px !important; }
+.pl30 { padding-left: 30px !important; }
+
+.pb0 { padding-bottom: 0 !important; }
+.pb1 { padding-bottom: 1px !important; }
+.pb5 { padding-bottom: 5px !important; }
+.pb10 { padding-bottom: 10px !important; }
+.pb15 { padding-bottom: 15px !important; }
+.pb20 { padding-bottom: 20px !important; }
+.pb30 { padding-bottom: 30px !important; }
+
+.pt0 { padding-top: 0 !important; }
+.pt1 { padding-top: 1px !important; }
+.pt5 { padding-top: 5px !important; }
+.pt10 { padding-top: 10px !important; }
+.pt15 { padding-top: 15px !important; }
+.pt20 { padding-top: 20px !important; }
+.pt30 { padding-top: 30px !important; }
+
+.left { float: left !important; }
+.right { float: right !important; }
+.txt-r{
+	text-align: right;
 }
-li{
-	list-style-type: none;
-}
-a{
-	text-decoration: none;
-}
+
 .fw100 { font-weight: 100; }
-.fw300, .nb { font-weight: 300; }
+.fw300 { font-weight: 300; }
 .fw400 { font-weight: 400; }
 .fw500 { font-weight: 500; }
-.fw700, .b { font-weight: 700 !important; }
+.fw700 { font-weight: 700 !important; }
 .fw900 { font-weight: 900 }
+
+.btn{
+	color: #fff;
+	background-color: #1890ff;
+	border: 1px solid #1890ff;
+	padding: 6px 12px;
+	border-radius: 4px;
+	cursor: pointer;
+	white-space: nowrap;
+	outline: 0;
+}
+
+.btn:hover{
+	color: #fff;
+	background-color: #40a9ff;
+	border-color: #40a9ff;
+}
+.btn.default{
+	background-color: #fff;
+	border-color: #d9d9d9;
+	color: rgba(0,0,0,0.65);
+}
+.btn.disabled{
+	color: rgba(0,0,0,0.25);
+	background-color: #f5f5f5;
+	border-color: #d9d9d9;
+	cursor: not-allowed;
+}
