--- a/src/pages/NewsList/TopStories/index.scss
+++ b/src/pages/NewsList/TopStories/index.scss
@@ -7,9 +7,11 @@
   height: 100%;
   overflow: hidden;
   .slider-inner{
-    position: absolute;
+    display: flex;
+    //position: absolute;
     width: 100%;
     height: 100%;
+    transition: all .6s ease;
   }
   img{
     height: 100%;
@@ -17,6 +19,7 @@
   }
   .slider-item{
     position: relative;
+    flex-shrink: 0;
     display: block;
     width: 100%;
     height: 100%;
@@ -38,13 +41,14 @@
     right: 50%;
     transform: translate(50%,0);
     li{
-      width: 8px;
-      height: 8px;
+      width: 10px;
+      height: 10px;
       border-radius: 50%;
       background-color: #aaa;
       float: left;
       list-style: none;
-      margin: 0 4px;
+      margin: 0px 5px;
+      cursor: pointer;
       &.on{
         background-color: #fff;
 
