--- a/src/global.css
+++ b/src/global.css
@@ -42,6 +42,7 @@ a{  text-decoration: none;  }
 .ml15 { margin-left: 15px !important; }
 .ml20 { margin-left: 20px !important; }
 .ml30 { margin-left: 30px !important; }
+.ml40 { margin-left: 40px !important; }
 
 .p0 { padding: 0 !important; }
 .p5 { padding: 5px !important; }
