--- a/src/pages/NewsList/index.scss
+++ b/src/pages/NewsList/index.scss
@@ -34,7 +34,7 @@
     padding: 14px 20px;
     width: 100%;
     display: block;
-    height: 110px;
+    min-height: 110px;
     cursor: pointer;
     overflow: hidden;
     &:hover{
@@ -44,7 +44,8 @@
       float: right;
       //width: 28%;
       margin-left: 10px;
-      height: 100%;
+      //height: 100%;
+      height: 84px;
       text-align: right;
     }
   }
@@ -52,6 +53,11 @@
     font-size: 18px;
     font-weight: 500;
     margin-bottom: 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
   }
 }
 
