--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -40,7 +40,7 @@
     float: left;
     display: inline-block;
     min-width: 50px;
-    padding: 0 16px;
+    padding: 0 16px 0;
     text-align: center;
     height: 100%;
     //line-height: 53px;
