--- a/src/pages/NewsList/NewsList.scss
+++ b/src/pages/NewsList/NewsList.scss
@@ -31,7 +31,7 @@
   .item-link{
     color: #333;
     background-color: #fff;
-    padding: 14px 20px;
+    padding: 10px 20px;
     width: 100%;
     display: block;
     min-height: 110px;
@@ -50,14 +50,18 @@
     }
   }
   .title{
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 500;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+  }
+  .hint{
+    color: #999;
+    font-size: 14px;
   }
 }
 
